--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <span class="label">Notes</span>
             </a>
 
-            <a href="resume.html" class="hotspot" id="link-resume">
+            <a href="resume.pdf" class="hotspot" id="link-resume">
                 <span class="dot"></span>
                 <span class="label">Resume</span>
             </a>
