Restore transition duration to 1.8s in CSS

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 box-shadow: 0 0 15px rgba(255,255,255,0.6);
             }
 
-            /* Smooth transition for these states */
+            /* Smooth transition for these states (Restored to 1.8s) */
             .dot, .label {
-                transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+                transition: all 1.8s cubic-bezier(0.19, 1, 0.22, 1);
             }
         }
 
