Update links in notes modal to empty hrefs

--- a/index.html
+++ b/index.html
@@ -551,15 +551,15 @@
         <div class="modal-content" onclick="event.stopPropagation()">
             <h3>Access Notes</h3>
             <div class="modal-options">
-                <a href="resume.pdf" target="_blank" class="modal-option">
+                <a href="" target="_blank" class="modal-option">
                     <span class="dot-small"></span>
                     <span class="option-text">Git-Notes.pdf</span>
                 </a>
-                <a href="resume.pdf" target="_blank" class="modal-option">
+                <a href="" target="_blank" class="modal-option">
                     <span class="dot-small"></span>
                     <span class="option-text">Calc-3-heatSheet.pdf</span>
                 </a>
-                <a href="resume.pdf" target="_blank" class="modal-option">
+                <a href="" target="_blank" class="modal-option">
                     <span class="dot-small"></span>
                     <span class="option-text">ESP-Board-Makers.pdf</span>
                 </a>
